--- a/native/android/app/src/main/res/layout/fragment_hidden_group_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_hidden_group_list.xml
@@ -29,8 +29,10 @@
       android:layout_marginTop="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/hiddenGroupText" />
+      app:layout_constraintTop_toBottomOf="@+id/hiddenGroupText"
+      app:layout_constraintVertical_bias="0.0" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
