--- a/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
@@ -46,7 +46,7 @@
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_marginBottom="8dp"
-      app:layout_constraintBottom_toTopOf="@+id/buttonStep2"
+      app:layout_constraintBottom_toTopOf="@+id/buttonStep4"
       app:layout_constraintEnd_toStartOf="@+id/tagImage3"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent">
@@ -101,7 +101,7 @@
       app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-      android:id="@+id/buttonStep2"
+      android:id="@+id/buttonStep4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="16dp"
@@ -125,5 +125,18 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/nowLoadingStep4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/now_loading"
+      android:textSize="18sp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/chart"
+      app:layout_constraintEnd_toEndOf="@+id/chart"
+      app:layout_constraintStart_toStartOf="@+id/chart"
+      app:layout_constraintTop_toTopOf="@+id/chart" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
