--- a/native/android/app/src/main/res/layout/fragment_add_payment_step2.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step2.xml
@@ -23,7 +23,7 @@
       android:id="@+id/step"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Step2"
+      android:text="@string/step2"
       android:textSize="36sp"
       app:layout_constraintBottom_toTopOf="@+id/sentence"
       app:layout_constraintStart_toStartOf="@+id/sentence"
@@ -36,7 +36,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:text="誰が支払った？"
+      android:text="@string/who_paid"
       android:textSize="30sp"
       app:layout_constraintBottom_toTopOf="@+id/tab_layout"
       app:layout_constraintStart_toStartOf="parent"
