--- a/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
@@ -11,6 +11,7 @@
       android:id="@+id/tagImage3"
       android:layout_width="95dp"
       android:layout_height="95dp"
+      android:contentDescription="@string/tag"
       app:layout_constraintBottom_toBottomOf="@+id/constraintDate2"
       app:layout_constraintEnd_toStartOf="@+id/camera2"
       app:layout_constraintHorizontal_bias="0.5"
@@ -22,6 +23,7 @@
       android:id="@+id/camera2"
       android:layout_width="95dp"
       android:layout_height="95dp"
+      android:contentDescription="@string/camera_icon"
       android:src="@android:drawable/ic_menu_camera"
       app:layout_constraintBottom_toBottomOf="@+id/constraintDate2"
       app:layout_constraintEnd_toStartOf="@+id/comment2"
@@ -34,6 +36,7 @@
       android:id="@+id/comment2"
       android:layout_width="85dp"
       android:layout_height="85dp"
+      android:contentDescription="@string/comment"
       android:src="@drawable/ic_baseline_comment_24"
       app:layout_constraintBottom_toBottomOf="@+id/constraintDate2"
       app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:text="year"
+        android:text="@string/year"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/calendarDate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +70,7 @@
         android:id="@+id/calendarDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="date"
+        android:text="@string/date"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,6 +83,7 @@
         android:id="@+id/calendar"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:contentDescription="@string/calendar"
         android:src="@drawable/ic_baseline_calendar_today_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +99,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginBottom="8dp"
-      android:text="Step4"
+      android:text="@string/step4"
       android:textSize="36sp"
       app:layout_constraintBottom_toTopOf="@+id/camera2"
       app:layout_constraintStart_toStartOf="parent" />
@@ -107,8 +111,8 @@
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="16dp"
       android:backgroundTint="#000000"
-      android:text="支払い登録"
-      android:textColor="@color/cardview_light_background"
+      android:text="@string/register_payment"
+      android:textColor="#FFFFFF"
       android:textSize="24sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />
