--- a/native/android/app/src/main/res/layout/fragment_add_payment.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment.xml
@@ -53,7 +53,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
-      android:text="支払い者："
+      android:text="@string/payer"
       android:textSize="18sp"
       android:visibility="invisible"
       app:layout_constraintStart_toStartOf="@+id/paymentName"
@@ -69,7 +69,7 @@
       app:layout_constraintStart_toEndOf="@+id/whoPaidtext"
       app:layout_constraintTop_toTopOf="@+id/whoPaidtext" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragment2"
       android:name="androidx.navigation.fragment.NavHostFragment"
       android:layout_width="match_parent"
