--- a/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
@@ -22,7 +22,7 @@
     android:layout_marginEnd="24dp"
     android:layout_marginBottom="8dp"
     android:backgroundTint="#000000"
-    android:text="Next"
+    android:text="@string/next"
     android:textColor="#FFFFFF"
     android:textSize="18sp"
     app:layout_constraintBottom_toBottomOf="parent"
