--- a/native/android/app/src/main/res/layout/fragment_account_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_edit.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/thumbnailEdit"
       android:layout_width="83dp"
       android:layout_height="85dp"
