--- a/native/android/app/src/main/res/layout/dialog_add_friend.xml
+++ b/native/android/app/src/main/res/layout/dialog_add_friend.xml
@@ -5,7 +5,7 @@
   android:layout_width="wrap_content"
   android:layout_height="wrap_content">
 
-  <ImageView
+  <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/thumbnail_dialog"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
