--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -25,7 +25,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
 
-      <ImageView
+      <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/groupIcon"
         android:layout_width="90dp"
         android:layout_height="90dp"
