--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -227,6 +227,9 @@
     <action
       android:id="@+id/action_groupListHidden_to_account_home"
       app:destination="@id/account_home" />
+    <action
+      android:id="@+id/action_groupListHidden_to_groupDetail"
+      app:destination="@id/groupDetail" />
   </fragment>
   <fragment
     android:id="@+id/groupDetail"
