--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -289,5 +289,8 @@
     <action
       android:id="@+id/action_addPayment_to_groupDetail"
       app:destination="@id/groupDetail" />
+    <action
+      android:id="@+id/action_addPayment_to_home_fragment"
+      app:destination="@id/home_fragment" />
   </fragment>
 </navigation>
