--- a/native/android/app/src/main/res/layout/list_item_payment.xml
+++ b/native/android/app/src/main/res/layout/list_item_payment.xml
@@ -23,8 +23,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:paymentBackColor="@{isCompleted}">
+    android:layout_height="wrap_content">
 
     <TextView
       android:id="@+id/paymentName"
