支払い編集時に支払い情報を渡してStep1に表示させるまで

--- a/native/android/app/src/main/res/menu/header_edit.xml
+++ b/native/android/app/src/main/res/menu/header_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
-  <item android:id="@+id/done"
+  <item android:id="@+id/editMenuButton"
     android:title="編集"
     app:showAsAction="ifRoom"/>
 </menu>
