--- a/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
@@ -5,6 +5,20 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+  <Button
+    android:id="@+id/skipButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="8dp"
+    android:backgroundTint="#000000"
+    android:text="@string/skip"
+    android:textColor="#FFFFFF"
+    android:textSize="18sp"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/nextButton" />
+
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyckerViewPager"
     android:layout_width="0dp"
