--- a/native/android/app/src/main/res/layout/fragment_settle_up.xml
+++ b/native/android/app/src/main/res/layout/fragment_settle_up.xml
@@ -7,5 +7,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+      android:id="@+id/textView7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="jpy"
+      android:textSize="24sp"
+      app:layout_constraintBottom_toBottomOf="@+id/editTextNumberDecimal"
+      app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
+      app:layout_constraintTop_toTopOf="@+id/editTextNumberDecimal" />
+
+    <EditText
+      android:id="@+id/editTextNumberDecimal"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:ems="10"
+      android:inputType="numberDecimal"
+      android:textSize="24sp"
+      android:windowSoftInputMode="adjustPan"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.4" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+      android:id="@+id/thumbnail1"
+      android:layout_width="75dp"
+      android:layout_height="75dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/imageView8"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintHorizontal_chainStyle="spread"
+      app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
+      app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
+      app:layout_constraintVertical_bias="0.20"
+      app:srcCompat="@drawable/circle_theme_color" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+      android:id="@+id/thumbnail2"
+      android:layout_width="75dp"
+      android:layout_height="75dp"
+      app:layout_constraintBottom_toBottomOf="@+id/thumbnail1"
+      app:layout_constraintEnd_toStartOf="@+id/textView7"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toEndOf="@+id/imageView8"
+      app:layout_constraintTop_toTopOf="@+id/thumbnail1"
+      app:srcCompat="@drawable/circle_theme_color" />
+
+    <ImageView
+      android:id="@+id/imageView8"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="@+id/thumbnail1"
+      app:layout_constraintEnd_toStartOf="@+id/thumbnail2"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toEndOf="@+id/thumbnail1"
+      app:layout_constraintTop_toTopOf="@+id/thumbnail1"
+      app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
+
+    <TextView
+      android:id="@+id/username1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:textSize="18sp"
+      app:layout_constraintEnd_toEndOf="@+id/thumbnail1"
+      app:layout_constraintStart_toStartOf="@+id/thumbnail1"
+      app:layout_constraintTop_toBottomOf="@+id/thumbnail1" />
+
+    <TextView
+      android:id="@+id/username2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:textSize="18sp"
+      app:layout_constraintEnd_toEndOf="@+id/thumbnail2"
+      app:layout_constraintStart_toStartOf="@+id/thumbnail2"
+      app:layout_constraintTop_toBottomOf="@+id/thumbnail2" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
