削除系のUI改善とバグの修正

--- a/native/android/app/src/main/res/layout/list_group_item_plane.xml
+++ b/native/android/app/src/main/res/layout/list_group_item_plane.xml
@@ -12,7 +12,8 @@
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="0dp">
+    android:layout_marginStart="0dp"
+    android:background="@color/tw__solid_white">
 
     <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/thumbnail"
