--- a/native/android/app/src/main/res/layout/list_item_payment.xml
+++ b/native/android/app/src/main/res/layout/list_item_payment.xml
@@ -22,6 +22,7 @@
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/paymentRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:paymentBackColor="@{isCompleted}">
