--- a/native/android/app/src/main/res/layout/list_item_checkbox.xml
+++ b/native/android/app/src/main/res/layout/list_item_checkbox.xml
@@ -22,13 +22,15 @@
       app:checkbox="@{userProperty}"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.0" />
 
     <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/thumbnail"
-      android:layout_width="75dp"
-      android:layout_height="75dp"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
       android:layout_marginStart="32dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
@@ -42,7 +44,7 @@
     <TextView
       android:id="@+id/userName"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="40dp"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:textSize="24sp"
