group非表示のUIを向上

--- a/native/android/app/src/main/res/layout/fragment_hidden_group_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_hidden_group_list.xml
@@ -16,9 +16,11 @@
       android:id="@+id/hiddenGroupText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
       android:layout_marginTop="24dp"
       android:text="@string/hiddenGroups"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:textSize="24sp"
+      android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +28,7 @@
       android:id="@+id/groupHiddenRecycle"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="16dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
