--- a/native/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_list.xml
@@ -17,9 +17,11 @@
       android:id="@+id/groupListTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
       android:text="@string/group_choice_list"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:textSize="24sp"
+      android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
