--- a/native/android/app/src/main/res/layout/fragment_friend_list.xml
+++ b/native/android/app/src/main/res/layout/fragment_friend_list.xml
@@ -19,7 +19,7 @@
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="24dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -37,10 +37,11 @@
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:text="@string/choose_group_members"
-      android:textSize="18sp"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="24dp"
+      android:text="@string/select_member"
+      android:textSize="24sp"
+      android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +50,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="24dp"
       android:layout_marginEnd="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
