--- a/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
@@ -11,17 +11,16 @@
       android:id="@+id/currentPassEdit"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="32dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="50dp"
       android:layout_marginEnd="32dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/current_password"
       android:inputType="textPassword"
-      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.30" />
+      app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Button
       android:id="@+id/changePassButton"
@@ -91,6 +90,18 @@
       android:visibility="invisible"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/textView11"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="24dp"
+      android:text="@string/change_password"
+      android:textSize="24sp"
+      android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
