グループ作成のUIを変更

--- a/native/android/app/src/main/res/layout/fragment_create_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_group.xml
@@ -17,14 +17,13 @@
       android:id="@+id/thumbnailEdit"
       android:layout_width="85dp"
       android:layout_height="85dp"
-      android:layout_marginTop="64dp"
+      android:layout_marginTop="16dp"
       android:background="@drawable/circle_theme_color"
       android:backgroundTint="#4B000000"
       android:contentDescription="@string/profile_photo"
       android:padding="4dp"
       android:src="@android:drawable/ic_menu_camera"
-      app:layout_constraintEnd_toStartOf="@+id/groupName"
-      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,32 +31,32 @@
       android:id="@+id/groupName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
       android:ems="10"
       android:hint="@string/register_group_name"
       android:importantForAutofill="no"
       android:inputType="textPersonName"
       android:textAlignment="center"
       android:textSize="24sp"
-      app:layout_constraintBottom_toBottomOf="@+id/thumbnailEdit"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toEndOf="@+id/thumbnailEdit"
-      app:layout_constraintTop_toTopOf="@+id/thumbnailEdit" />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/GridViewFriends"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="24dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="8dp"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit"
-      app:spanCount="3"/>
+      app:layout_constraintTop_toBottomOf="@+id/groupName"
+      app:spanCount="3" />
 
     <TextView
       android:id="@+id/nowLoading"
@@ -70,6 +69,17 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/textView14"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:text="@string/change_group_profile"
+      android:textColor="@color/ourTheme"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/thumbnailEdit" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
