--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -312,6 +312,10 @@
       android:name="groupDetail"
       app:argType="work.calmato.prestopay.network.GroupPropertyResponse"
       />
+    <argument
+      android:name="lendingStatus"
+      app:argType="work.calmato.prestopay.network.NetworkPayerContainer"
+      />
     <action
       android:id="@+id/action_settleUp_to_groupDetail"
       app:destination="@id/groupDetail" />
